<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Title">
        <menu>
            <item
                android:id="@+id/nav_guide"
                android:icon="@drawable/about"
                android:title="OPTION 1" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/about"
                android:title="OPTION 2" />
            <item
                android:id="@+id/nav_history"
                android:icon="@drawable/about"
                android:title="OPTION 3" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/about"
                android:title="OPTION 4" />
        </menu>
    </item>

    <item android:title="@string/information">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/about"
                android:title="@string/menu_about" />
            <item
                android:id="@+id/nav_privacy"
                android:icon="@drawable/privacy"
                android:title="@string/menu_privacy" />
            <item
                android:id="@+id/nav_terms"
                android:icon="@drawable/about"
                android:title="@string/menu_terms" />
        </menu>
    </item>

</menu>
