<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frag_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.MainActivity"
    tools:ignore="ContentDescription,UseCompoundDrawables">

    <!-- company logo (temporary) -->
    <ImageView
        android:id="@+id/iv_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/scaling_20"
        android:scaleType="fitCenter"
        android:src="@drawable/digitax_icon" />

    <!-- auth options wrapper -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ll_copyright_terms"
        android:layout_marginBottom="@dimen/scaling_20"
        android:orientation="vertical">

        <!-- unlock (biometrics) -->
        <TextView
            android:id="@+id/tv_unlock"
            android:layout_width="match_parent"
            android:layout_height="@dimen/scaling_50"
            android:layout_marginStart="@dimen/scaling_20"
            android:layout_marginEnd="@dimen/scaling_20"
            android:background="@drawable/pill_red_50_rad"
            android:gravity="center"
            android:text="@string/unlock"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_18" />

        <!-- use password -->
        <TextView
            android:id="@+id/tv_use_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/scaling_50"
            android:layout_marginStart="@dimen/scaling_20"
            android:layout_marginEnd="@dimen/scaling_20"
            android:gravity="center"
            android:text="@string/use_password"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_18" />

        <!-- log out -->
        <TextView
            android:id="@+id/tv_logout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/scaling_50"
            android:layout_marginStart="@dimen/scaling_20"
            android:layout_marginEnd="@dimen/scaling_20"
            android:gravity="center"
            android:text="@string/log_out"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_18" />

    </LinearLayout>

    <!-- copyright | terms & privacy policy wrapper -->
    <LinearLayout
        android:id="@+id/ll_copyright_terms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/scaling_20"
        android:layout_marginBottom="@dimen/scaling_20"
        android:orientation="vertical">

        <!-- copyright -->
        <TextView
            android:id="@+id/tv_copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_14" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- terms -->
            <TextView
                android:id="@+id/tv_terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_14" />

            <!-- and -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/scaling_5"
                android:layout_marginEnd="@dimen/scaling_5"
                android:text="@string/and"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_14" />

            <!-- privacy policy -->
            <TextView
                android:id="@+id/tv_privacy_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_14" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>