<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    tools:targetApi="lollipop">

    <!-- header -->
    <include
        android:id="@+id/header"
        layout="@layout/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- instructions -->
    <TextView
        android:id="@+id/tv_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/scaling_10"
        android:paddingStart="@dimen/scaling_15"
        android:paddingEnd="@dimen/scaling_15"
        android:text="@string/enter_email_reset_password"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size_18" />

    <!-- email -->
    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/scaling_10"
        android:autofillHints="@string/email"
        android:background="@color/transparent"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLength="40"
        android:padding="@dimen/scaling_15"
        android:textSize="@dimen/font_size_16" />

    <!-- CTA -->
    <TextView
        android:id="@+id/tv_forgot_password_cta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/scaling_15"
        android:layout_marginTop="@dimen/scaling_15"
        android:layout_marginEnd="@dimen/scaling_15"
        android:background="@drawable/pill_white_50_rad"
        android:elevation="5dp"
        android:gravity="center"
        android:padding="@dimen/scaling_12"
        android:text="@string/reset"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size_20" />

</LinearLayout>